--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -62,7 +62,25 @@
                 android:text="پست های من"
                 android:textColor="#ffffff"
                 android:textSize="18sp" />
+            <ImageView
+                android:id="@+id/imageViewCat"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:alpha="0.8"
+                android:visibility="visible"
+                app:srcCompat="@drawable/gradient_line" />
 
+            <TextView
+                android:id="@+id/category_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lalehzar"
+                android:gravity="center_vertical"
+                android:text="دسته بندی های من"
+                android:textColor="#ffffff"
+                android:textSize="18sp" />
             <ImageView
                 android:id="@+id/imageView11"
                 android:layout_width="match_parent"
