--- a/app/src/main/res/layout/viewholder_category_list.xml
+++ b/app/src/main/res/layout/viewholder_category_list.xml
@@ -27,122 +27,94 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
             <TextView
-                android:id="@+id/rowNumber"
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="5dp"
-                android:fontFamily="@font/dimafred"
-                android:text="1"
+                android:fontFamily="@font/iranyekanmedium"
+                android:text="نمایش پست"
                 android:textColor="@color/blue_900"
                 android:textSize="14sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="10dp"
-                android:layout_weight="1"
-                android:orientation="vertical">
+        </LinearLayout>
 
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="10dp"
-                    android:fontFamily="@font/iranyekanmedium"
-                    android:singleLine="true"
-                    android:text="عنوان"
-                    android:textColor="@android:color/black"
-                    android:textDirection="rtl"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:id="@+id/statusTxt"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="5dp"
-                    android:fontFamily="@font/iranyekanmedium"
-                    android:text="فعال"
-                    android:textColor="@color/green_A700"
-                    android:textSize="12sp"
-                    android:visibility="gone" />
-            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/editBtn"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:background="@drawable/background_item_orange_border"
+                android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    android:id="@+id/editBtn"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:background="@drawable/background_item_orange_border"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/imageView9"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:tint="@color/blue_900"
-                        app:srcCompat="@mipmap/edit_icon" />
-
-                    <TextView
-                        android:id="@+id/textView22"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:fontFamily="@font/iranyekanwebregular"
-                        android:text="ویرایش"
-                        android:textColor="@color/black"
-                        android:textSize="10sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/deleteBtn"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
+                <TextView
+                    android:id="@+id/textView22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:background="@drawable/background_item_orange_border"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical">
+                    android:layout_weight="1"
+                    android:fontFamily="@font/iranyekanwebregular"
+                    android:text="ویرایش"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
 
-                    <ImageView
-                        android:id="@+id/imageView9"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:tint="@color/red_A400"
-                        app:srcCompat="@mipmap/unmark" />
-
-                    <TextView
-                        android:id="@+id/textView22"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:fontFamily="@font/iranyekanwebregular"
-                        android:text="حذف"
-                        android:textColor="@color/black"
-                        android:textSize="10sp" />
-
-                </LinearLayout>
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_margin="10dp"
+                    android:tint="@color/blue_900"
+                    app:srcCompat="@mipmap/edit_icon" />
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/deleteBtn"
+                android:layout_width="100dp"
+                android:layout_height="35dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/background_item_orange_border"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/iranyekanwebregular"
+                    android:text="حذف "
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_margin="10dp"
+                    android:tint="@color/red_A400"
+                    app:srcCompat="@mipmap/unmark" />
+
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
