--- a/app/src/main/res/layout/activity_list_teacher.xml
+++ b/app/src/main/res/layout/activity_list_teacher.xml
@@ -167,6 +167,65 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/categoryBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/background_edittext_gray"
+                        android:orientation="horizontal">
+
+                        <EditText
+                            android:id="@+id/edtSearch"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="10dp"
+                            android:layout_weight="1"
+                            android:background="#cacaca"
+                            android:fontFamily="@font/casablanca"
+                            android:hint="نام گروه"
+                            android:singleLine="true"
+                            android:textColor="#000000"
+                            android:textColorHint="#ffffff"
+                            android:textSize="16sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/sendBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:background="@drawable/background_button_gradiunt_blue"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView17"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="10dp"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/casablanca"
+                            android:text="ذخیره"
+                            android:textColor="#ffffff" />
+
+                        <TextView
+                            android:id="@+id/textView18"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:fontFamily="sans-serif"
+                            android:gravity="center"
+                            android:text="✓"
+                            android:textColor="@color/light_green_A400"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
