--- a/app/src/main/res/layout/viewholder_teacher_list.xml
+++ b/app/src/main/res/layout/viewholder_teacher_list.xml
@@ -83,9 +83,39 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/SelectBtn"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:background="@drawable/background_item_orange_border"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageView9"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:tint="@color/blue_900"
+                        app:srcCompat="@mipmap/edit_icon" />
+
+                    <TextView
+                        android:id="@+id/textView22"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/iranyekanwebregular"
+                        android:text="تخصیص"
+                        android:textColor="@color/black"
+                        android:textSize="10sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/editBtn"
                     android:layout_width="45dp"
                     android:layout_height="45dp"
+                    android:layout_marginStart="10dp"
                     android:background="@drawable/background_item_orange_border"
                     android:gravity="center_vertical"
                     android:orientation="vertical">
