--- a/app/src/main/res/layout/viewholder_banner_list.xml
+++ b/app/src/main/res/layout/viewholder_banner_list.xml
@@ -22,6 +22,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:id="@+id/buttonsLayer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
