--- a/app/src/main/res/layout/viewholder_teacher_list.xml
+++ b/app/src/main/res/layout/viewholder_teacher_list.xml
@@ -77,99 +77,134 @@
                     android:visibility="gone" />
             </LinearLayout>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:id="@+id/UnSelectBtn"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:background="@drawable/background_item_orange_border"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/SelectBtn"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:background="@drawable/background_item_orange_border"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:tint="@color/blue_900"
+                    app:srcCompat="@mipmap/profile" />
 
-                    <ImageView
-                        android:id="@+id/imageView9"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:tint="@color/blue_900"
-                        app:srcCompat="@mipmap/edit_icon" />
+                <TextView
+                    android:id="@+id/textView22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/iranyekanwebregular"
+                    android:text="حذف افراد"
+                    android:textColor="@color/black"
+                    android:textSize="10sp" />
 
-                    <TextView
-                        android:id="@+id/textView22"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:fontFamily="@font/iranyekanwebregular"
-                        android:text="تخصیص"
-                        android:textColor="@color/black"
-                        android:textSize="10sp" />
+            </LinearLayout>
 
-                </LinearLayout>
+            <LinearLayout
+                android:id="@+id/SelectBtn"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/background_item_orange_border"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/editBtn"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:layout_marginStart="10dp"
-                    android:background="@drawable/background_item_orange_border"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:tint="@color/blue_900"
+                    app:srcCompat="@mipmap/profile" />
 
-                    <ImageView
-                        android:id="@+id/imageView9"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:tint="@color/blue_900"
-                        app:srcCompat="@mipmap/edit_icon" />
+                <TextView
+                    android:id="@+id/textView22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/iranyekanwebregular"
+                    android:text="تخصیص افراد"
+                    android:textColor="@color/black"
+                    android:textSize="10sp" />
 
-                    <TextView
-                        android:id="@+id/textView22"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:fontFamily="@font/iranyekanwebregular"
-                        android:text="ویرایش"
-                        android:textColor="@color/black"
-                        android:textSize="10sp" />
+            </LinearLayout>
 
-                </LinearLayout>
+            <LinearLayout
+                android:id="@+id/editBtn"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/background_item_orange_border"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/deleteBtn"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:layout_marginStart="10dp"
-                    android:background="@drawable/background_item_orange_border"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:tint="@color/blue_900"
+                    app:srcCompat="@mipmap/edit_icon" />
 
-                    <ImageView
-                        android:id="@+id/imageView9"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:tint="@color/red_A400"
-                        app:srcCompat="@mipmap/unmark" />
+                <TextView
+                    android:id="@+id/textView22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/iranyekanwebregular"
+                    android:text="ویرایش عنوان"
+                    android:textColor="@color/black"
+                    android:textSize="10sp" />
 
-                    <TextView
-                        android:id="@+id/textView22"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:fontFamily="@font/iranyekanwebregular"
-                        android:text="حذف"
-                        android:textColor="@color/black"
-                        android:textSize="10sp" />
+            </LinearLayout>
 
-                </LinearLayout>
+            <LinearLayout
+                android:id="@+id/deleteBtn"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/background_item_orange_border"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:tint="@color/red_A400"
+                    app:srcCompat="@mipmap/unmark" />
+
+                <TextView
+                    android:id="@+id/textView22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/iranyekanwebregular"
+                    android:text="حذف گروه"
+                    android:textColor="@color/black"
+                    android:textSize="10sp" />
 
             </LinearLayout>
 
